Use localization to fill in makerspace name and other details in message templates.

--- a/config/messages/box_final_warning.subject.html
+++ b/config/messages/box_final_warning.subject.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Din labblåda rensas snart ut / Your lab storage box will soon be removed
+{{translate("brand:makerspace_name")}} - Din labblåda rensas snart ut / Your lab storage box will soon be removed
