--- a/config/messages/box_terminated.subject.html
+++ b/config/messages/box_terminated.subject.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Din låda har blivit utgallrad / Your lab storage box has been forfeited
+{{translate("brand:makerspace_name")}} - Din låda har blivit utgallrad / Your lab storage box has been forfeited
