--- a/config/messages/labaccess_reminder.subject.html
+++ b/config/messages/labaccess_reminder.subject.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Dags att förnya ditt labbmedlemskap / Time to renew your lab membership
+{{translate("brand:makerspace_name")}} - Dags att förnya ditt labbmedlemskap / Time to renew your lab membership
