--- a/config/messages/memberbooth_label_expiring_soon.body.html
+++ b/config/messages/memberbooth_label_expiring_soon.body.html
@@ -13,7 +13,7 @@
 </p>
 <p>
   Med vänliga hälsningar,<br/>
-  Stockholm Makerspace
+  {{translate("brand:makerspace_name")}}
 </p>
 {% endblock %}
 
@@ -29,7 +29,7 @@
 </p>
 <p>
   Sincerely,<br/>
-  Stockholm Makerspace<br/>
+  {{translate("brand:makerspace_name")}}<br/>
 </p>
 
 {% endblock %}
