--- a/config/messages/memberbooth_label_report.body.html
+++ b/config/messages/memberbooth_label_report.body.html
@@ -21,9 +21,9 @@
     Läs våra förvaringsregler <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">här</a>.
 </p>
 <p>
-  Om du anser att detta inte stämmer, hör av dig till <a href="mailto: info@makerspace.se">info@makerspace.se</a><br/>
+  Om du anser att detta inte stämmer, hör av dig till <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a><br/>
   Med vänliga hälsningar,<br/>
-  Stockholm Makerspace<br/>
+  {{translate("brand:makerspace_name")}}<br/>
 </p>
 {% endblock %}
 
@@ -47,9 +47,9 @@
   Read our storage rules <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">here</a>.
 </p>
 <p>
-  If you feel that this is incorrect, please contact <a href="mailto: info@makerspace.se">info@makerspace.se</a> as soon as possible.<br/>
+  If you feel that this is incorrect, please contact <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a> as soon as possible.<br/>
   Sincerely,<br/>
-  Stockholm Makerspace<br/>
+  {{translate("brand:makerspace_name")}}<br/>
 </p>
 
 {% endblock %}
