--- a/config/messages/memberbooth_label_report_sms.body.html
+++ b/config/messages/memberbooth_label_report_sms.body.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - The storage of your {{thing_name}} has been reported. Check your email for more information.
+{{translate("brand:makerspace_name")}} - The storage of your {{thing_name}} has been reported. Check your email for more information.
