--- a/config/messages/membership_reminder.subject.html
+++ b/config/messages/membership_reminder.subject.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Dags att förnya ditt årsmedlemskap / Time to renew your annual membership
+{{translate("brand:makerspace_name")}} - Dags att förnya ditt årsmedlemskap / Time to renew your annual membership
