--- a/config/messages/new_member.body.html
+++ b/config/messages/new_member.body.html
@@ -5,13 +5,13 @@
 <p style="font-size: small;"><em>(For information in ENGLISH, see below the dashed line).</em></p>
 
 <p>
-    Välkommen till Stockholm Makerspace! Du är nu del av Sveriges största självständiga Makerspace. Tillsammans hjälps vi åt att förbli en självständig och medlems-driven teknisk fristad för gemenskap och skapande.</p>
+    Välkommen till {{translate("brand:makerspace_name")}}! Du är nu del av Sveriges största självständiga Makerspace. Tillsammans hjälps vi åt att förbli en självständig och medlems-driven teknisk fristad för gemenskap och skapande.</p>
 
-<p>Allt i Stockholm Makerspace är byggt, köpt, dit-kört och renoverat av medlemmar som du och jag. Ingen får lön och vi får inga bidrag. Orsaken till att vi kan betala hyran är att vi är många som hjälps åt genom att betala medlemsskap. Det är fantastiskt vad medborgare kan skapa tillsammans. Om du tycker att det finns något som kan utvecklas så är du varmt välkommen att engagera dig i driften av vår förening.
+<p>Allt i {{translate("brand:makerspace_name")}} är byggt, köpt, dit-kört och renoverat av medlemmar som du och jag. Ingen får lön och vi får inga bidrag. Orsaken till att vi kan betala hyran är att vi är många som hjälps åt genom att betala medlemsskap. Det är fantastiskt vad medborgare kan skapa tillsammans. Om du tycker att det finns något som kan utvecklas så är du varmt välkommen att engagera dig i driften av vår förening.
 </p>
 
 <p>
-    Vi vet av erfarenhet att du, som ny medlem, har mängder av frågor om Stockholm Makerspace. I detta mail hittar du den information du behöver för att själv kunna hitta svaren på alla dina frågor och funderingar, så läs mailet noga!
+    Vi vet av erfarenhet att du, som ny medlem, har mängder av frågor om {{translate("brand:makerspace_name")}}. I detta mail hittar du den information du behöver för att själv kunna hitta svaren på alla dina frågor och funderingar, så läs mailet noga!
 </p>
 
 <h3>Medlemsinformation</h3>
@@ -40,34 +40,34 @@
 </p>
 
 <h3>Jag är jätteduktig på en sak. Får jag hålla kurs i saken?</h3>
-<p>Absolut! Emaila styrelsen på <a href="mailto:info@makerspace.se">info@makerspace.se</a> så pratar vi upplägg, anmälan och sätter in kursen i kalendariet. Om du är osäker på om det finns en efterfrågan inom just ditt kunskapsområde kan du kolla av intresse genom att posta om saken i Facebookgruppen eller på Slack.</p>
+<p>Absolut! Emaila styrelsen på <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a> så pratar vi upplägg, anmälan och sätter in kursen i kalendariet. Om du är osäker på om det finns en efterfrågan inom just ditt kunskapsområde kan du kolla av intresse genom att posta om saken i Facebookgruppen eller på Slack.</p>
 
 <h3>Min Makerspace Acccess håller på att ta slut, måste jag komma förbi igen och aktivera den?</h3>
-<p>Nej. Du behöver bara gå på en medlemsintroduktion första gången. Sedan kan du köpa mer access via din <a href="https://medlem.makerspace.se/">medlems-sida</a>.</p>
+<p>Nej. Du behöver bara gå på en medlemsintroduktion första gången. Sedan kan du köpa mer access via din <a href="{{ public_url('') }}">medlems-sida</a>.</p>
 
 <h3>Vad är mitt medlemsnummer, är mitt medlemsskap aktivt och hur lång tid är det aktivt?</h3>
-<p>Kolla <a href="https://medlem.makerspace.se/">din alldeles egna medlems-sida</a>.</p>
+<p>Kolla <a href="{{ public_url('') }}">din alldeles egna medlems-sida</a>.</p>
 
 <h3>Jag saknar en sak. Kan jag köpa in saken?</h3>
 <p>Inköp till föreningen ska vara demokratiska i så stor utsträckning som möjligt. Vi har tyvärr bara 300m2 utrymme och det är proppfullt med saker, så donationer och inköp måste godkännas av styrelsen innan inköp och transport sker till lokalen. Om man vill få ersättning för utlägg som görs för vår gemensamma maskinpark så behöver du få inköpet godkänt av styrelsemedlem eller rumsansvarig innan inköp. Spara inköpskvittot så att vår kassör kan sköta vår gemensamma redovisning. Vid dyrare inköp så behöver styrelsen sammanträda för att ta gemensamt beslut innan inköp kan göras. Du kan även lyfta din önskan i Facebookgruppen eller på Slack. </p>
 
-<h3>Får jag göra en prototyp på Stockholm Makerspace?</h3>
-<p>Ja, i mån av plats och om du inte säljer prototypen. Du ska heller inte ha bolagiserat ännu. Stockholm Makerspace är en ideell förening. För att kunna fortsätta vara det så får vi inte bedriva kommersiell verksamhet. Det betyder att du inte får göra produkter till försäljning.</p>
+<h3>Får jag göra en prototyp på {{translate("brand:makerspace_name")}}?</h3>
+<p>Ja, i mån av plats och om du inte säljer prototypen. Du ska heller inte ha bolagiserat ännu. {{translate("brand:makerspace_name")}} är en ideell förening. För att kunna fortsätta vara det så får vi inte bedriva kommersiell verksamhet. Det betyder att du inte får göra produkter till försäljning.</p>
 
 <h3>Är det sant att jag får ha min alldeles egen låda här?</h3>
 <p>Yes! Köp din egen förvaringsbox med måtten 50x39x26 cm (32L). Märk den med en etikett från <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a> och ställ den på en en fri plats på hyllplanen i korridoren. Lådan finns ex vis på <a href="https://www.clasohlson.com/se/F%C3%B6rvaringsl%C3%A5da-SmartStore-Home/34-1552-31">Clas Ohlson</a>. </p>
 
 <h3>Jag bygger något större än labblådan, var ska jag förvara det?</h3>
-<p>I mån av plats så kan du lägga ditt projekt i de avsedda hyllorna i lagerrummet, under max 3 månader. Ditt projekt ska vara märkt med en etikett från <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a>, annars kommer det att slängas. Vi har plats för köpta skivor av plywood, akryl och liknande bredvid laserskäraren i stora rummet. Alla regler kring förvaring på Stockholm Makerspace går att hitta på <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">wikin.</a></p>
+<p>I mån av plats så kan du lägga ditt projekt i de avsedda hyllorna i lagerrummet, under max 3 månader. Ditt projekt ska vara märkt med en etikett från <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a>, annars kommer det att slängas. Vi har plats för köpta skivor av plywood, akryl och liknande bredvid laserskäraren i stora rummet. Alla regler kring förvaring på {{translate("brand:makerspace_name")}} går att hitta på <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">wikin.</a></p>
 
 <h3>Jag lämnade mitt projekt på ett bord över natten och sen var det borta!</h3>
 <p>Du måste städa efter dig. Vi har en städare som vi betalar en ansenlig summa för att våttorka golv och bord varje vecka. Men han rör inte bord med saker på, och städar inte golv där det står saker. Det är jätteviktigt att du städar undan efter dig, så att vi kan ha en gemensam, ren lokal. Har du råkat lämna saker på ett bord så kan det ha slängts eller flyttats till en Lost&Found-låda. Medlemmar hjälps åt att tömma soporna. Fråga en medlem om du inte vet hur man gör, eller kolla in <a href="https://wiki.makerspace.se/St%C3%A4drutiner">städrutinerna</a>.</p>
 
 <h3>Jag är hungrig.</h3>
-<p>Stockholm Makerspace erbjuder ett pentry med en kaffekokare och mikrovågsugn. Du kan också köpa färdigmat på The Coffice över gatan, eller på 7-Eleven eller T-Snabben nere vid Östra Station.</p>
+<p>{{translate("brand:makerspace_name")}} erbjuder ett pentry med en kaffekokare och mikrovågsugn. Du kan också köpa färdigmat på The Coffice över gatan, eller på 7-Eleven eller T-Snabben nere vid Östra Station.</p>
 
 <h3>Hur funkar styrelsen?</h3>
-<p>Styrelsen arbetar ideellt och möts ungefär 1 gång i månaden. Då går man igenom ekonomi, kommande medlemsintroduktions-datum, eventuella problem och tar beslut kring större inköp. Om du vill kontakta styrelsen så emaila <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
+<p>Styrelsen arbetar ideellt och möts ungefär 1 gång i månaden. Då går man igenom ekonomi, kommande medlemsintroduktions-datum, eventuella problem och tar beslut kring större inköp. Om du vill kontakta styrelsen så emaila <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a>.</p>
 
 
 <h3>Ok. Var får jag reda på mer?</h3>
@@ -75,16 +75,16 @@
     <li>Vår <a href="https://wiki.makerspace.se/Slack">Slack</a> är väldigt aktiv med rum för olika ämnesområden. Där ställer man frågor, hittar hjälp och får info om kurser. </li>
     <li><a href="https://www.facebook.com/groups/makerspace.se">Facebook-gruppen</a>.
     <li>I <a href="https://www.makerspace.se/kalendarium">Kalendariet</a> ser du events och medlemsintroduktioner.</li>
-    <li><a href="https://www.makerspace.se/">Hemsidan</a> innehåller länkar och info om föreningen.</li>
+    <li><a href="{{translate('brand:homepage_url')}}">Hemsidan</a> innehåller länkar och info om föreningen.</li>
     <li><a href="https://wiki.makerspace.se">Wikin</a> innehåller mycket, till ex <a href="https://wiki.makerspace.se/Makerspace_FAQ">Makerspace FAQ</a> (allmäna frågor & svar), och <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> samt hjälp och info per maskin.</li>
-    <li>Köp saker i vår <a href="https://medlem.makerspace.se/shop/">webbshop</a> (ladda på medlemskap, köp material, betala laser-tid, osv)</li>
-    <li>Frågor direkt till styrelsen skickas till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</li>
+    <li>Köp saker i vår <a href="{{ public_url('/shop') }}">webbshop</a> (ladda på medlemskap, köp material, betala laser-tid, osv)</li>
+    <li>Frågor direkt till styrelsen skickas till <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a>.</li>
 </ul>
 
 <p>
     Bästa hälsningar,<br/>
-    Styrelsen i Stockholm Makerspace<br/>
-    <a href="https://www.makerspace.se/">www.makerspace.se</a>
+    Styrelsen i {{translate("brand:makerspace_name")}}<br/>
+    <a href="{{translate('brand:homepage_url')}}" target="_blank">{{translate('brand:homepage_url')}}</a>
 </p>
 {% endblock %}
 
@@ -92,11 +92,11 @@
 
 <p>ENGLISH</p>
 
-<p>Welcome to the Stockholm Makerspace! You are now a part of Sweden's largest independent makerspace. We work together to remain an independent and member-driven tech haven for community and creation.</p>
+<p>Welcome to the {{translate("brand:makerspace_name")}}! You are now a part of Sweden's largest independent makerspace. We work together to remain an independent and member-driven tech haven for community and creation.</p>
 
-<p>Everything at Stockholm Makerspace is built, bought, transported, and renovated by members like you and me. No one gets a salary and we get no grants. The reason why we can pay the rent is that we are many who help out by paying membership dues. It's amazing what people can create together. If you think there is something that can be developed then you are most welcome to get involved in the operation of our association.</p>
+<p>Everything at {{translate("brand:makerspace_name")}} is built, bought, transported, and renovated by members like you and me. No one gets a salary and we get no grants. The reason why we can pay the rent is that we are many who help out by paying membership dues. It's amazing what people can create together. If you think there is something that can be developed then you are most welcome to get involved in the operation of our association.</p>
 
-<p>As a new member, you probably have a lot of questions about the Stockholm Makerspace. In this email you'll find the info you need to answer most, if not all, of your questions, so please read this email carefully!
+<p>As a new member, you probably have a lot of questions about the {{translate("brand:makerspace_name")}}. In this email you'll find the info you need to answer most, if not all, of your questions, so please read this email carefully!
 </p>
 
 <h3>Member info</h3>
@@ -118,19 +118,19 @@
 <p>All activities are run by volunteers, like you and me. We help each other learn the machines so that everyone can work independently. Share what you can, and ask for help if you get stuck. Some machines require that you have gone to a course for in order to be able to use, for example:  welding (svetsrummet), laser cutter, embroidery-machine and resin printer. Courses are advertised in the Facebook group and on Slack and can be found on the calendar. There is no queue - first come, first served.</p>
 
 <h3>I'm really good at something. Can I lead a workshop?</h3>
-<p>Absolutely! Email the board at <a href="mailto:info@makerspace.se">info@makerspace.se</a> to talk about the set up, creating a sign-up, and posting the course in the calendar. If you're unsure there is interest for your specific area of knowledge you can ask in the Facebook-group or on Slack.</p>
+<p>Absolutely! Email the board at <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a> to talk about the set up, creating a sign-up, and posting the course in the calendar. If you're unsure there is interest for your specific area of knowledge you can ask in the Facebook-group or on Slack.</p>
 
 <h3>My makerspace access is running out, do I have to come in person again to activate it?</h3>
-<p>No. You only need to attend a member introduction once. You can buy additional access from <a href="https://medlem.makerspace.se/">your member page</a>.</p>
+<p>No. You only need to attend a member introduction once. You can buy additional access from <a href="{{ public_url('') }}">your member page</a>.</p>
 
 <h3>What is my member number, do I have access, and how long is my access valid for?</h3>
-<p>Check out <a href="https://medlem.makerspace.se/">your member page</a>.</p>
+<p>Check out <a href="{{ public_url('') }}">your member page</a>.</p>
 
 <h3>I would like to have certain tool/thing. Can I buy that thing?</h3>
 <p>Purchases for the organization should be democratic as much as possible. Unfortunately, we only have 300m2 of space and it is packed with things, so donations and purchases must be approved by the board before purchasing and transport to the premises. If you want to get compensation for expenses that are made for our common machine park then you need to have the purchase approved by a board member or room manager before purchasing. Save the purchase receipt so that our treasurer can handle the accounting. In the case of more expensive purchases, the Board needs to meet to make a joint decision before a purchase can be made. You can also write down what you want on Slack or in the Facebook-group.</p>
 
-<h3>Can I make a prototype at the Stockholm Makerspace?</h3>
-<p>Yes, if there is room and if you do not sell the prototype. You also should not have formed a company yet. Stockholm Makerspace is a non-profit association. In order to be able to continue like this, we must not conduct commercial activities. This means that you are not allowed to make products for sale.</p>
+<h3>Can I make a prototype at the {{translate("brand:makerspace_name")}}?</h3>
+<p>Yes, if there is room and if you do not sell the prototype. You also should not have formed a company yet. {{translate("brand:makerspace_name")}} is a non-profit association. In order to be able to continue like this, we must not conduct commercial activities. This means that you are not allowed to make products for sale.</p>
 
 <h3>Is it true I can keep my own storage box here?</h3>
 <p>Yes! Purchase your own storage box of size 50x39x26 cm (32L). Label it with a label from <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth</a> and find a place for it on the shelves in the corridor. Boxes can be purchased at places like <a href="https://www.clasohlson.com/se/F%C3%B6rvaringsl%C3%A5da-SmartStore-Home/34-1552-31">Clas Ohlson</a>.</p>
@@ -142,10 +142,10 @@
 <p>You have to clean up after yourself. We have a cleaning service that we pay a considerable amount to mop floors and tables every week. But the cleaner does not touch tables with things on them, and does not clean floors where things are. It is very important that you clean up after yourself, so that we all can have a common, clean room. If you happened to leave things on a table, it might have been thrown away or moved to a Lost & Found box. Members help to empty the garbage. Ask a member if you don't know how to do it, or check out the <a href="https://wiki.makerspace.se/St%C3%A4drutiner">cleaning routines</a>.</p>
 
 <h3>I'm hungry.</h3>
-<p>Stockholm Makerspace has a kitchenette with a coffee maker and a microwave oven. You can buy food across the street at The Coffice, or at 7-Eleven or T-Snabben near the station.</p>
+<p>{{translate("brand:makerspace_name")}} has a kitchenette with a coffee maker and a microwave oven. You can buy food across the street at The Coffice, or at 7-Eleven or T-Snabben near the station.</p>
 
 <h3>How does the Board work?</h3>
-<p>All Board members are volunteers and we meet about once per month. At the board meetings we discuss the financials, upcoming new member introductions ("medlemsintroduktion"), any problems, and decide on larger purchases. If you want to contact the Board, email <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
+<p>All Board members are volunteers and we meet about once per month. At the board meetings we discuss the financials, upcoming new member introductions ("medlemsintroduktion"), any problems, and decide on larger purchases. If you want to contact the Board, email <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a>.</p>
 
 
 <h3>Ok. Where can I find out more?</h3>
@@ -153,15 +153,15 @@
     <li>Our <a href="https://wiki.makerspace.se/Slack">Slack</a> is very active with chatrooms for different areas. There you can ask questions, ask for help, and get info about workshops.</li>
     <li><a href="https://www.facebook.com/groups/makerspace.se">Our facebook-group</a>.
     <li>In the <a href="https://www.makerspace.se/kalendarium">Calendar</a> you can see the upcoming events and new member introductions.</li>
-    <li><a href="https://www.makerspace.se/">The homepage</a> has links and other info about the association.</li>
+    <li><a href="{{translate('brand:homepage_url')}}">The homepage</a> has links and other info about the association.</li>
     <li><a href="https://wiki.makerspace.se">The Wiki</a> has lots of information, including <a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">Makerspace FAQ</a>, and <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">a list of tools and equipment</a>, as well as help for each machine.</li>
-    <li>Buy things in our <a href="https://medlem.makerspace.se/shop/">webshop</a> (renew memberships, buy material, pay for laser cutter time, etc).</li>
-    <li>Question for the Board can be sent directly to <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</li>
+    <li>Buy things in our <a href="{{ public_url('/shop') }}">webshop</a> (renew memberships, buy material, pay for laser cutter time, etc).</li>
+    <li>Question for the Board can be sent directly to <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a>.</li>
 </ul>
 
 <p>
     Best regards,<br/>
-    The Board of Stockholm Makerspace<br/>
-    <a href="https://www.makerspace.se/">www.makerspace.se</a>
+    The Board of {{translate("brand:makerspace_name")}}<br/>
+    <a href="{{translate('brand:homepage_url')}}" target="_blank">{{translate('brand:homepage_url')}}</a>
 </p>
 {% endblock %}
