--- a/config/messages/password_reset.body.html
+++ b/config/messages/password_reset.body.html
@@ -6,6 +6,6 @@
 {% block english %}
 <h2>Hi {{member.firstname}}</h2>
 <a href="{{ url }}" style="display: block; width: 200px; text-decoration: none; color: #FFF; font-size: 16pt; border-radius: 10px; background: rgb(0, 168, 230); padding: 10px; text-align: center;">Reset Password</a>
-<p style="color: #aaa; max-width: 420px;">You are receiving this email because someone has requested a password reset for MakerAdmin at Stockholm Makerspace. If this was not you, you can ignore this email.</p>
+<p style="color: #aaa; max-width: 420px;">You are receiving this email because someone has requested a password reset for MakerAdmin at {{translate("brand:makerspace_name")}}. If this was not you, you can ignore this email.</p>
 
 {% endblock %}
