--- a/config/messages/quiz_first_newmember.body.html
+++ b/config/messages/quiz_first_newmember.body.html
@@ -4,10 +4,10 @@
 {% endblock %}
 
 {% block english %}
-<h2>Hello {{member.firstname}} and welcome to Stockholm Makerspace!</h2>
+<h2>Hello {{member.firstname}} and welcome to {{translate("brand:makerspace_name")}}!</h2>
 <p>We are sure you are excited to get started on a project at the makerspace!</p>
 <p>To help you get started we have put together this quiz as a learning tool. It will go through many common questions you might have
-    and also many things that you might not have thought about but that are important for you to know in order to make Stockholm Makerspace work well.</p>
+    and also many things that you might not have thought about but that are important for you to know in order to make {{translate("brand:makerspace_name")}} work well.</p>
 <p>Note that this is not intended as a test of your knowledge, it is a way for new members to learn how things work without having to read through a long and boring document.
 Completing this quiz is a mandatory part of becoming a member. You will receive nagging emails every few days or so until you complete the quiz.
 </p>
