--- a/config/messages/receipt.body.html
+++ b/config/messages/receipt.body.html
@@ -22,10 +22,10 @@
   </table>
 
   <p style="color: #777">
-    Stockholm Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm<br>
-    Org. Nummer: 802467-7026<br>
-    Stockholm Makerspace är en ideell förening.<br>
-    <a href="https://makerspace.se/" target="_blank">makerspace.se</a><br>
+    {{translate("brand:makerspace_name")}} - {{translate("brand:billing_address")}}<br>
+    Org. Nummer: {{translate("brand:organization_number")}}<br>
+    {{translate("brand:makerspace_name")}} är en ideell förening.<br>
+    <a href="{{translate('brand:homepage_url')}}" target="_blank">{{translate('brand:homepage_url')}}</a><br>
   </p>
 {% endblock %}
 
@@ -51,10 +51,10 @@
   </table>
 
   <p style="color: #777">
-    Stockholm Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm<br>
-    Org. Nummer: 802467-7026<br>
-    Stockholm Makerspace is a non-profit organization.<br>
-    <a href="https://makerspace.se/" target="_blank">makerspace.se</a><br>
+    {{translate("brand:makerspace_name")}} - {{translate("brand:billing_address")}}<br>
+    Org. Number: {{translate("brand:organization_number")}}<br>
+    {{translate("brand:makerspace_name")}} is a non-profit organization.<br>
+    <a href="{{translate('brand:homepage_url')}}" target="_blank">{{translate('brand:homepage_url')}}</a><br>
   </p>
 
 {% endblock %}
