--- a/config/messages/updated_member_info.body.html
+++ b/config/messages/updated_member_info.body.html
@@ -4,24 +4,24 @@
 <p>Hej {{ member.firstname }},</p>
 <p>(See below for English).</p>
 <p>
-    Dina personliga uppgifter har uppdaterats. Om detta inte var korrekt bör du kontakta styrelsen på info@makerspace.se.
+    Dina personliga uppgifter har uppdaterats. Om detta inte var korrekt bör du kontakta styrelsen på <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a>.
 </p>
 
 {% if message_swe %}
 {{ message_swe }}
 {% endif %}
 
-<p>Med vänliga hälsningar,<br />Stockholm Makerspace</p>
+<p>Med vänliga hälsningar,<br />{{translate("brand:makerspace_name")}}</p>
 {% endblock %}
 
 {% block english %}
 <p>
-    Your personal information has been updated. If this was incorrect you should inform the board on info@makerspace.se.
+    Your personal information has been updated. If this was incorrect you should inform the board on <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a>.
 </p>
 
 {% if message_en %}
 {{ message_en }}
 {% endif %}
 
-<p>Sincerely,<br />Stockholm Makerspace</p>
+<p>Sincerely,<br />{{translate("brand:makerspace_name")}}</p>
 {% endblock %}
