--- a/config/messages/add_labaccess_time.body.html
+++ b/config/messages/add_labaccess_time.body.html
@@ -4,7 +4,7 @@
     <h2>Din labaccess har utökats!</h2>
     <p>Hej {{member.firstname}},</p>
     <p>Din labaccess har utökats med {{extended_days}} dagar och är nu giltig till och med {{end_date}}.</p>
-    <p>Kom ihåg att du alltid kan se din nuvarande labaccess-status på din <a href="{{ public_url('/member') }}">Stockholm Makerspace medlemssida</a>.</p>
+    <p>Kom ihåg att du alltid kan se din nuvarande labaccess-status på din <a href="{{ public_url('/member') }}">{{translate("brand:makerspace_name")}} medlemssida</a>.</p>
     <p>Ny labaccess och annat material kan köpas i <a href="{{ public_url('/shop') }}">webshoppen</a>.</p>
 {% endblock %}
 
@@ -12,6 +12,6 @@
     <h2>Your lab access time has been extended!</h2>
     <p>Hi {{member.firstname}},</p>
     <p>Your lab access time has been extended by  {{extended_days}} days and is now active up to and including {{end_date}}.</p>
-    <p>Remember that you can always see you current lab membership status on your <a href="{{ public_url('/member') }}">Stockholm Makerspace member homepage</a>.</p>
+    <p>Remember that you can always see you current lab membership status on your <a href="{{ public_url('/member') }}">{{translate("brand:makerspace_name")}} member homepage</a>.</p>
     <p>New lab access and other material can be purchased in the <a href="{{ public_url('/shop') }}">webshop</a>.</p>
 {% endblock %}
