--- a/config/messages/add_membership_time.body.html
+++ b/config/messages/add_membership_time.body.html
@@ -1,17 +1,17 @@
 {% extends "email_body_base.html" %}
 
 {% block swedish %}
-    <h2>Ditt föreningsmedlemsskap i Stockholm Makerspace har utökats!</h2>
+    <h2>Ditt föreningsmedlemsskap i {{translate("brand:makerspace_name")}} har utökats!</h2>
     <p>Hej {{member.firstname}},</p>
     <p>Ditt föreningsmedlemsskap har utökats med {{extended_days}} dagar och är nu giltigt till och med {{end_date}}.</p>
-    <p>Kom ihåg att du alltid kan se din nuvarande medlemsskap och labaccess-status på din <a href="{{ public_url('/member') }}">Stockholm Makerspace medlemssida</a>.</p>
+    <p>Kom ihåg att du alltid kan se din nuvarande medlemsskap och labaccess-status på din <a href="{{ public_url('/member') }}">{{translate("brand:makerspace_name")}} medlemssida</a>.</p>
     <p>Ny labaccess och annat material kan köpas i <a href="{{ public_url('/shop') }}">webshoppen</a>.</p>
 {% endblock %}
 
 {% block english %}
-    <h2>Your membership dues for Stockholm Makerspace have been paid!</h2>
+    <h2>Your membership dues for {{translate("brand:makerspace_name")}} have been paid!</h2>
     <p>Hi {{member.firstname}},</p>
     <p>Your membership time has been extended by {{extended_days}} days and is now valid up to an including {{end_date}}.</p>
-    <p>Remember that you can always see you current membership and lab membership status on your <a href="{{ public_url('/member') }}">Stockholm Makerspace member homepage</a>.</p>
+    <p>Remember that you can always see you current membership and lab membership status on your <a href="{{ public_url('/member') }}">{{translate("brand:makerspace_name")}} member homepage</a>.</p>
     <p>New lab access and other material can be purchased in the <a href="{{ public_url('/shop') }}">webshop</a>.</p>
 {% endblock %}
