--- a/config/messages/box_final_warning.body.html
+++ b/config/messages/box_final_warning.body.html
@@ -4,41 +4,41 @@
 <h2>Hej {{member.firstname}}</h2>
 <p>(See below for English).</p>
 <p>
-  Ditt labbmedlemskap i Stockholm Makerspace gick ut den {{labaccess_end_date}}, det innebär att du inte haft
+  Ditt labbmedlemskap i {{translate("brand:makerspace_name")}} gick ut den {{labaccess_end_date}}, det innebär att du inte haft
   ett aktivt labbmedlemskap på {{days_after_expiration}} dagar. Vid nästa genomgång av labblådorna kommer din
   låda att tillfalla föreningen om du inte agerar.
 </p>
 <p>
   Du har nu följande två alternativ:
   <ul>
-    <li>Förnya ditt labbmedlemskap i <a href="https://medlem.makerspace.se/shop">webshoppen</a>.</li>
+    <li>Förnya ditt labbmedlemskap i <a href="{{ public_url('/shop') }}">webshoppen</a>.</li>
     <li>Hämta din labblåda och eventuell temporär förvaring.</li>
   </ul>
 </p>
 <p>
-  Om du anser att detta inte stämmer, hör av dig till <a href="mailto: info@makerspace.se">info@makerspace.se</a><br/>
+  Om du anser att detta inte stämmer, hör av dig till <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a><br/>
   Med vänliga hälsningar,<br/>
-  Stockholm Makerspace<br/>
+  {{translate("brand:makerspace_name")}}<br/>
 </p>
 {% endblock %}
 
 {% block english %}
 <h2>Hi {{member.firstname}}</h2>
 <p>
-  Your lab membership in Stockholm Makerspace expired on {{labaccess_end_date}}, which means that you have not had an
+  Your lab membership in {{translate("brand:makerspace_name")}} expired on {{labaccess_end_date}}, which means that you have not had an
   active lab membership for {{days_after_expiration}} days. At the next review of the lab storage boxes,
-  your box will belong to the Stockholm Makerspace if you do not act.
+  your box will belong to the {{translate("brand:makerspace_name")}} if you do not act.
 </p>
 <p>
   You now have the following two options:
   <ul>
-    <li>Renew your lab membership in our <a href="https://medlem.makerspace.se/shop">webshoppen</a>.</li>
+    <li>Renew your lab membership in our <a href="{{ public_url('/shop') }}">webshoppen</a>.</li>
     <li>Retrieve your lab storage box and any of your other temporary storage.</li>
   </ul>
 </p>
 <p>
-  If you feel that this is not the case, please contact <a href="mailto: info@makerspace.se">info@makerspace.se</a> as soon as possible.<br/>
+  If you feel that this is not the case, please contact <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a> as soon as possible.<br/>
   Sincerely,<br/>
-  Stockholm Makerspace<br/>
+  {{translate("brand:makerspace_name")}}<br/>
 </p>
 {% endblock %}
