--- a/config/messages/box_warning.subject.html
+++ b/config/messages/box_warning.subject.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Din labblåda rensas snart ut / Your lab storage box will soon be removed
+{{translate("brand:makerspace_name")}} - Din labblåda rensas snart ut / Your lab storage box will soon be removed
