--- a/config/messages/labaccess_reminder.body.html
+++ b/config/messages/labaccess_reminder.body.html
@@ -16,9 +16,9 @@
     </p>
     <p>
         Om du inte tänkt förnya ditt labbmedlemskap så är vi nyfikna på att veta varför, skriv en rad eller två
-        till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
+        till <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a>.
     </p>
-    <p>Med vänliga hälsningar,<br/>Stockholm Makerspace</p>
+    <p>Med vänliga hälsningar,<br/>{{translate("brand:makerspace_name")}}</p>
 {% endblock %}
 
 {% block english %}
@@ -30,12 +30,12 @@
     <p>
         If you do not intend to renew your lab membership, then remember to retrieve your lab storage box and
         your any temporary project storage from the premises before your lab membership expires. According to
-        current lab member agreement, the lab storage box and its contents belong to Stockholm Makerspace
+        current lab member agreement, the lab storage box and its contents belong to {{translate("brand:makerspace_name")}}
         from 45 days after your lab membership expires.
     </p>
     <p>
         If you are not going to renew your lab membership, we are curious to know why. Please write a line
-        or two to <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
+        or two to <a href="mailto:{{translate('brand:email')}}">{{translate("brand:email")}}</a>.
     </p>
-    <p>Sincerely,<br/>Stockholm Makerspace</p>
+    <p>Sincerely,<br/>{{translate("brand:makerspace_name")}}</p>
 {% endblock %}
