--- a/config/messages/login_link.body.html
+++ b/config/messages/login_link.body.html
@@ -5,5 +5,5 @@
 
 {% block english %}
     <a href="{{url}}" style="display: block; width: 200px; text-decoration: none; color: #FFF; font-size: 16pt; border-radius: 10px; background: rgb(0, 168, 230); padding: 10px; text-align: center;">Login</a>
-    <p style="color: #aaa; max-width: 420px;">You are receiving this email because someone has requested to login to Stockholm Makerspace. If this was not you, you can ignore this email.</p>
+    <p style="color: #aaa; max-width: 420px;">You are receiving this email because someone has requested to login to {{translate("brand:makerspace_name")}}. If this was not you, you can ignore this email.</p>
 {% endblock %}
