--- a/config/messages/memberbooth_box_cleaned_away_sms.body.html
+++ b/config/messages/memberbooth_box_cleaned_away_sms.body.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Your {{thing_name}} has been forfeited. Check your email for more information.
+{{translate("brand:makerspace_name")}} - Your {{thing_name}} has been forfeited. Check your email for more information.
