--- a/config/messages/memberbooth_box_expired.subject.html
+++ b/config/messages/memberbooth_box_expired.subject.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Din labblåda rensas snart ut / Your lab storage box will soon be removed
+{{translate("brand:makerspace_name")}} - Din labblåda rensas snart ut / Your lab storage box will soon be removed
