--- a/config/messages/memberbooth_label_cleaned_away.subject.html
+++ b/config/messages/memberbooth_label_cleaned_away.subject.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Your {{thing_name}} has been forfeited.
+{{translate("brand:makerspace_name")}} - Your {{thing_name}} has been forfeited.
